Update UI Check_in and update dataroom controller - close #83
