# backend/docs/swagger.json
@@ -538,7 +538,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/ent.ReserveRoom"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/ent.ReserveRoom"
+                            }
                         }
                     },
                     "400": {
@@ -942,6 +945,54 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    }
+                }
+            }
+        },
+        "/dataroomcustomer/{id}": {
+            "get": {
+                "description": "get dataroomcustomer by ID",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get a dataroomcustomer entity by ID",
+                "operationId": "get-dataroomcustomer",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "dataroomcustomer ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/ent.DataRoom"
+                            }
                         }
                     },
                     "400": {
